--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,12 @@ pyttsx3==2.90
 onnxruntime==1.20.1
 daphne==4.0.0
 PyYAML==6.0
-opencv-python==4.7.0.72
 setuptools
 wheel
 virtualenv
 opencv-python==4.7.0.72
+opencv-python-headless==4.5.5.64
+
 
 
 
