--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ opencv-python-headless==4.5.5.64
 torch==2.0.1
 torchvision==0.15.2
 onnx==1.12.0
-onnxruntime==1.14.1
+onnxruntime==1.20.1  # Updated to latest available version
 numpy==1.24.3  # Compatible with OpenCV and Torch
 
 # WebSockets & Async Features
